fix word-wrap in card

--- a/app/css/widgets/card.scss
+++ b/app/css/widgets/card.scss
@@ -50,6 +50,7 @@
     font-weight: normal;
     font-size: 18px;
     line-height: 25px;
+    word-break: break-all;
   }
 
   &__status {
